--- a/idex.html
+++ b/idex.html
@@ -100,7 +100,7 @@
         <div class="about__jobs">
             <div class="job">
                 <img 
-                src="imgs/jobs/posco.jpg" 
+                src="imgs/jobs/posco2.jpg" 
                 alt="POSCO ENERGY" 
                 class="job__logo"
                 />
@@ -265,7 +265,7 @@
             <div class="testimonials">
                 <div class="testimonial">
                     <img 
-                    src="imgs/jobs/posco.jpg" 
+                    src="imgs/jobs/posco2.jpg" 
                     alt="People"
                     class="testimonial__avatar"
                     />
@@ -285,7 +285,7 @@
                         <p class="name"><a href="#"> Park Young Soo (Vice President)</a> / POSCO</p>
                     </div>
                     <img 
-                        src="imgs/jobs/posco.jpg" 
+                        src="imgs/jobs/posco2.jpg" 
                         alt="People"
                         class="testimonial__avatar"
                     />
